fixed image and added styling to it

--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
         <h1 id="title">Ask a Ninja</h1>
         <section id="img-div">
             <figure>
-                <img id="image"
-                    src="/askaninja.jpg">
+                <img id="image" src="askaninja.jpg">
                 <figcaption id="img-caption">Ninja character over a red background.
                 </figcaption>
             </figure>
