--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <p id="tribute-info"><a href="https://www.youtube.com/askaninja" target="_blank" id="tribute-link">Ask A
                     Ninja</a> is a series of comedy videos about the image of ninja in popular culture available in
                 podcast
-                and vodcast form, as well as in mov and WMV file formats. The episodeswere released between 2005 and
+                and vodcast form, as well as in mov and WMV file formats. The episodes were released between 2005 and
                 2011.
                 <br />
                 <br />
@@ -36,7 +36,7 @@
     <footer>Ask a Ninja.(n.d.). In Wikipedia. Retrieved February 16, 2020, from <a
             href="https://en.wikipedia.org/wiki/Ask_a_Ninja"
             target="_blank">https://en.wikipedia.org/wiki/Ask_a_Ninja</a><br />
-        Photo aquired from the Ask a Ninja Facebook page at <a href="https://www.facebook.com/askaninja/"
+        Photo acquired from the Ask a Ninja Facebook page at <a href="https://www.facebook.com/askaninja/"
             target="_blank">https://www.facebook.com/askaninja/</a>
     </footer>
 </body>
